# image_cutter

./: .gitignore  CMakeLists.txt  init.txt  make.bat  make_win.mak  makefile.mak  makefile_extern_lib.mak  makefile_lib.mak  run.bat
form_ui/: viewer.ui
source/: CMakeLists.txt  common_c.h  cscene.cpp  cscene.h  cslidewin.cpp  cslidewin.h  cslidewin_thread.cpp  cslidewin_thread.h  cviewer.cpp  cviewer.h  main.cpp
